--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
 		"check": "biome check .",
 		"check:fix": "biome check --apply .",
 		"dev:clean": "biome check --apply . && vite",
-		"build:clean": "biome check --apply . && tsc && vite build"
+		"build:clean": "biome check --apply . && vite build"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
 		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-navigation-menu": "^2.1.14",
+		"@radix-ui/react-navigation-menu": "^1.2.14",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.14",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.546.0",
+		"lucide-react": "^0.468.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
-		"react-hook-form": "^7.65.0",
-		"tailwind-merge": "^3.3.1",
+		"react-hook-form": "^7.51.5",
+		"tailwind-merge": "^2.5.4",
 		"tailwindcss": "^4.1.14",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.2.6",
-		"@types/node": "^24.8.0",
-		"@types/react": "^19.1.16",
-		"@types/react-dom": "^19.1.9",
+		"@types/node": "^20.17.9",
+		"@types/react": "^19.1.1",
+		"@types/react-dom": "^19.1.1",
 		"@vitejs/plugin-react": "^5.0.4",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "~5.9.3",
